# aizuspider_description

./: AizuSpiderAA.rviz  AizuSpiderSS.l  AizuSpiderSS.urdf  AizuSpiderSS.yaml  AizuSpider_no_sim.cnoid  CMakeLists.txt  InvPend_keytest.py  InvPendulumAizu.body  InvPendulumAizu.cnoid  InvPendulumController.cpp  InvPendulumControllerSrv.cpp  InvPendulumControllerSrv2.cpp  InvPendulumWheel.body  InvPendulumWheelSrv.cnoid  InvPendulumWheelSrv2.cnoid  JAXON_no_sim.cnoid  README.md  Task1-Agent-System2019.cnoid  Task1-AizuSpiderSS.cnoid  Task2-Agent-System2019.cnoid  Task2-AizuSpiderSS.cnoid  aizu_p0.pseq  aizuspider-interface.l  aizuspider-ros-support.l  aizuspider.launch  aizuspider_controller_settings.yaml  aizuspider_task2.launch  aizuspider_wheel_task2.launch  click_and_pick.py  clicked-pick-aizuspider.l  clicked-pick-demo.l  clicked-pick-jaxon.l  clicked-pick-util.l  control_client.py  jaxon_p0.pseq  jaxon_task1.yaml  jaxon_task2.yaml  move.py  move_and_pick.py  package.xml  (+8 more)
mesh/: CHASSIS.stl  FLIPPER.stl  MAIN_BELT.stl  SUB_BELT.stl
models/: TrashBox.body  table.body  trash_a.body  trash_b.body  trash_c.body  trash_d.body  trash_e.body  trash_f.body
srv/: Control.srv  Grasp.srv  SolveIK.srv
