<?xml version="1.0"?>
<package>
  <name>aizuspider_description</name>
  <version>0.0.0</version>
  <description>The aizuspider_description package</description>

  <license>EPL</license>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">
    Yohei Kakiuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

  <export/>
</package>
