<?xml version="1.0"?>
<package>
  <name>aizuspider_description</name>
  <version>0.0.0</version>
  <description>The aizuspider_description package</description>

  <license>EPL</license>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">
    Yohei Kakiuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roseus</run_depend>

  <export/>
</package>
